--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,19 @@
-
+{
+  "name": "smart-campus-backend",
+  "version": "1.0.0",
+  "description": "Plateforme IoT Smart Campus",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "dev": "node server.js",
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "axios": "^1.13.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "react-router-dom": "^7.13.0"
+  }
+}
