--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,18 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
-    "start": "node server.js"
+    "dev": "node src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "axios": "^1.13.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
+    "cors": "^2.8.6",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "mongoose": "^8.22.1",
     "react-router-dom": "^7.13.0"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
