--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "mongoose": "^8.22.1",
+    "mqtt": "^5.15.0",
     "react-router-dom": "^7.13.0"
   },
   "keywords": [],
