--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.4",
     "cors": "^2.8.6",
+    "cros": "^1.1.0",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "mongoose": "^8.22.1",
