--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.22.1",
     "mongoose": "^8.22.1",
     "mqtt": "^5.15.0",
+    "node-fetch": "^2.7.0",
     "react-router-dom": "^7.13.0"
   },
   "keywords": [],
