--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
-    "axios": "^1.13.4"
+    "axios": "^1.13.5",
+    "node-fetch": "^2.7.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "vite": "^7.3.1"
   }
 }
